# oscioler

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
examples/: #sound_field.py#  sound_field.py
oscioler/: __init__.py  oscilloscope.py  slide_controller.py
